added background color

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #container1{
-    background-color: rgba(160, 153, 153, 0.993);
+    background-color: lightpink;
 }
 #container2{
 background-color: beige;
