--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ border-radius: 5px;
 .navbar{
     background-color: black;
     display:flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
     gap: 5%;
     color:beige;
     padding:2px;
@@ -26,7 +28,8 @@ border-radius: 5px;
 }
 .navbar2{
     display: flex;
-    gap:5px;
+    gap:10px;
+    margin-left: 20%;
 }
 .im2{
     max-width: 60px;
@@ -39,7 +42,7 @@ border-radius: 5px;
     border-radius: 300px;
 }
 .hero-image1{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("shoes12.webp");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/shoes12.webp");
     height: 80%;
     background-position: center;
     background-repeat: no-repeat;
@@ -134,7 +137,7 @@ gap: 40%;
     max-width: 90%;
 }
 .heroimage2{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("shoes1.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/shoes1.jpg");
     height:30%;
     background-position: center;
     background-repeat: no-repeat;
@@ -192,5 +195,12 @@ gap: 40%;
 .button{
     padding: 5px;
     border-radius: 10px;
-    margin: 1%;
+    margin-left: 5%;
+}
+.nav3{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    margin-left: 35%;
+    gap:10%;
 }
